# cs312

./: CMakeLists.txt  hw121_charOutput.cpp  hw122_charOutputTemplate.cpp  hw124_asciiTool.cpp
HAND-INS/hw41_StritzelMatt_BrownCam/hw413_CScalesTrack/: CMakeLists.txt  hw413_CMidiTrack.h  hw413_main.cpp
build-final-Desktop_Qt_5_14_1_clang_64bit-Debug/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_mainwindow.h
common/: hw222_CMidiPacket.cpp
extras/: ascii  gmdrums
final/: final.pro  mainwindow.cpp  mainwindow.ui
final_input/: final.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  rtaudioutils.cpp
hw11/: a.out  helloMidi  hw111_boilerplate.cpp  hw112_helloMidi.cpp
hw12/: FOLDERINFO  hw121_charOutput.cpp  hw122_charOutputTemplate (1).cpp  hw122_charOutputTemplate.cpp  hw123_charLoop.cpp  hw124_asciiTool.cpp  hw125_printMajorScale.cpp
hw13/: a.out  hw131_MidiPacket.h  hw131_MidiPacket_sizeof.cpp  hw131_MidiPacket_sizeof.cpp~  hw132_MidiPacket_cout.cpp  hw133_chromaticScale_vector.cpp  hw133_chromaticScale_vector.cpp~
hw21/class21/: deleteme.cpp
hw21/hw211_hexIntToString/: a.out  hw211_hexIntToString.cpp
hw21/hw212_CMidiPacket/: a.out  hw212_CMidiPacket.cpp  hw212_CMidiPacket.h  hw212_main.cpp
hw22/c221_argc_argv/: a.out  argc_argv.cpp
hw22/hw221_boilerplate/: a.out  hw221_boilerplate.cpp
hw22/hw222_CMidiPacket/: CMakeLists.txt  Makefile  a.out  hw222_CMidiPacket.cpp  hw222_CMidiPacket.h  hw222_main.cpp  hw222_test_CMidiPacket.cpp  hw222_test_CMidiPacket.h
hw23/class23_chrono/: c23_chronoFeatures.cpp  c23_simpleDelay.cpp
hw23/class23_random/: rand1.cpp  rand2.cpp  rand3.cpp  rand4.cpp  rand5.cpp  rand6.cpp  rand7.cpp  rand8.cpp  rand9.cpp
hw23/class23_vectors/: v01.cpp  v02.cpp  v03.cpp  v04.cpp  v05.cpp  v06.cpp  v07.cpp  v08.cpp  v09.cpp  v10.cpp  v11.cpp  v12.cpp  v13.cpp  v14.cpp  v15.cpp  v16.cpp  v17.cpp  v18.cpp  v19.cpp  v20.cpp  v21.cpp  v22.cpp  v23.cpp  v24.cpp  v25.cpp  v26.cpp  v27.cpp  v28.cpp  v29.cpp
hw23/hw231_testCMP22/: CMakeLists.txt  hw222_main.cpp  hw231_testCMP22.cpp
hw23/hw232_gmdrums/: CMakeLists.txt  a.out  hw232_drumNotes.txt  hw232_gmdrums.cpp  hw232_main.cpp
hw23/hw233_playdrums/: CMakeLists.txt  hw222_CMidiPacket.h  hw233_main.cpp  hw233_playdrums.cpp  hw233_playdrums.h
hw23/hw234_scifiSounds/: CMakeLists.txt  hw222_CMidiPacket.cpp  hw234_main.cpp  hw234_scifiSounds.cpp  hw234_scifiSounds.h
hw31/c311_regex_example1/: c311_regex.txt
hw31/c312_regex_example2/: c312_regex2.txt
hw31/c313_regex_example3/: CMakeLists.txt  c313_helloMidi.txt  c313_helloMidi_regex.cpp  hw312_CMidiPacket.cpp
hw31/hw311_regex/: hw311_answer.txt  oldDatabase.txt
hw31/hw312_CMidiPacketFriends/: CMakeLists.txt  hw312_CMidiPacket.cpp  hw312_CMidiPacket.h  hw312_main.cpp  hw312_test_CMidiPacket.cpp  hw312_test_CMidiPacket.h
hw32/hw322_CMP32gtest/: CMakeLists.txt  CMakeLists_gtest.txt  CMakeLists_normal.txt  hw322_CMidiPacket.cpp  hw322_CMidiPacket.h  hw322_gtests.cpp
hw33/c331_checkTimestamps/: CMakeLists.txt  hw331_checkTimestamps.cpp  hw331_checkTimestamps.h  hw331_main.cpp
hw33/hw332_testInvariants/: CMakeLists.txt  hw332_testInvariants.cpp
hw33/hw332_test_invariants/: CMakeLists.txt  hw332_main.cpp  hw332_testInvariants.cpp  hw332_testInvariants.h
hw41/hw411_rand_int/: a.out  hw411_main.cpp  hw411_rand_int.cpp
hw41/hw412_gmnames/: gmnames  hw412_gmnames.cpp  instrumentGMnames.txt
hw41/hw413_CScalesTrack/: hw413_CMidiTrack.cpp  hw413_CScalesTrack.cpp  hw413_CScalesTrack.h
hw41/hw414_measures_beats/: CMakeLists.txt  hw414_CMeasuresBeatTrack.cpp  hw414_main.cpp
hw42/c421_playSoftMidi/: CMakeLists.txt  a.out  c421_playSoftMidi.cpp
hw42/c421_playSoftMidi/a.out.dSYM/Contents/Resources/DWARF/: a.out
hw42/hw421_CDelayMs/: CDelayMs.cpp  CMakeLists.txt  hw421_CDelayMs.cpp  hw421_CDelayMs.h  hw421_main.cpp
hw42/hw422_CAppleMidiSynth/: CMakeLists.txt  hw422_CAppleMidiSynth.cpp  hw422_CAppleMidiSynth.h  hw422_main.cpp
hw42/hw423_CScalesTrio/: CMakeLists.txt  hw423_CAltoTrack.cpp  hw423_CAltoTrack.h  hw423_CBassTrack.cpp  hw423_CBassTrack.h  hw423_CScalesTrack.cpp  hw423_CScalesTrack.h  hw423_CSopranoTrack.cpp  hw423_CSopranoTrack.h  hw423_fave.txt  hw423_main.cpp
hw43/hw431_drumMachine/: CMakeLists.txt  hw431_CDrumMachine.cpp  hw431_CDrumTrack.cpp  hw431_CDrumTrack.h  hw431_main.cpp
hw43/hw431_drumMachine_xcode/: hw431_CDrumTrack.h
hw51/c511_CInstrument/: hw511_CInstrument.h
hw51/c512_pianoChords/: CMakeLists.txt  c512_main.cpp
hw51/c513_markovChain/: CMakeLists.txt  c513_CMarkovBlues.cpp  c513_CMarkovBlues.h  c513_main.cpp
hw51/hw511_blues/: CMakeLists.txt  c513_CMarkovBlues.cpp  c513_CMarkovBlues.h  hw431_CDrumMachine.h  hw431_CDrumTrack.cpp  hw511_CBluesBassTrack.cpp  hw511_CBluesBassTrack.h  hw511_CBluesMelodyTrack.cpp  hw511_CBluesMelodyTrack.h  hw511_CBluesPianoTrack.cpp  hw511_CBluesPianoTrack.h  hw511_main.cpp
hw62/c621_rt_midiprobe/: CMakeLists.txt
hw62/c622_rt_cmidiin/: CMakeLists.txt
hw72/: CMakeLists.txt  hw721_gensin.cpp
hw72/hw721_gensin/: CMakeLists.txt  hw721_gensin.cpp
hw72/hw721_gensine/: CMakeLists.txt  hw721_gensin.cpp
hw72/hw722_gensin_phasor/: CMakeLists.txt  hw722_gensin_phasor.cpp
hw72/hw723_gensin_beatDemo/: CMakeLists.txt  hw723_gensin_beatDemo.cpp
hw72/hw724_gensin_ringmod/: CMakeLists.txt  hw724_gensin_ringmod.cpp
hw72/hw725_gensin_ammod/: CMakeLists.txt  hw725_gensin_ammod.cpp
hw72/hw726_gensin_fmmod/: CMakeLists.txt  hw726_gensin_fmmod.cpp
hw73/hw732_playsine/: CMakeLists.txt  hw732_playsine.cpp
project1/: CMakeLists.txt  arpeggiate.cpp  arpeggio_track.cpp  arpeggio_track.h  project1_main.cpp
project1/common/: hw332_CMidiPacket.h  hw411_rand_int.cpp  hw411_rand_int.h  hw421_CDelayMs.cpp  hw422_CAppleMidiSynth.cpp  hw422_CAppleMidiSynth.h  hw423_CMidiTrack.cpp  hw423_CMidiTrack.h  hw423_CScalesTrack.cpp  hw511_CInstrument.cpp
project1/hw423_CScalesTrio/: CMakeLists.txt  hw423_CAltoTrack.cpp  hw423_CSopranoTrack.cpp  hw423_main.cpp
rtaudio/: Makefile  config.status  librtaudio.la  libtool  rtaudio.pc
test_directory/: tester.cpp
(+286 files in other folders)
