cmake_minimum_required(VERSION 3.15)
project(cs312_00_w20)

set(CMAKE_CXX_STANDARD 14)

include_directories(common)
include_directories(hw13)
include_directories(hw21/hw212_CMidiPacket)
include_directories(hw22/hw222_CMidiPacket)
include_directories(hw23/class23_chrono/c23_MidiPacketTimer)
include_directories(hw23/hw231_testCMP22)
include_directories(hw23/hw233_playdrums)
include_directories(hw23/hw234_scifiSounds)
include_directories(hw31/c313_regex_example3)
include_directories(hw31/hw312_CMidiPacketFriends)

add_executable(cs312_00_w20
        common/hw222_CMidiPacket.cpp
        common/hw222_CMidiPacket.h
        hw11/a.out.dSYM/Contents/Resources/DWARF/a.out
        hw11/a.out.dSYM/Contents/Info.plist
        hw11/helloMidi.dSYM/Contents/Resources/DWARF/helloMidi
        hw11/helloMidi.dSYM/Contents/Info.plist
        hw11/a.out
        hw11/foo
        hw11/helloMidi
        hw11/hw111_boilerplate.cpp
        hw11/hw112_helloMidi.cpp
        hw12/hw121_charOutput.cpp
        hw12/hw122_charOutputTemplate.cpp
        hw12/hw123_charLoop.cpp
        hw12/hw124_asciiTool.cpp
        hw12/hw125_printMajorScale.cpp
        hw13/a.out.dSYM/Contents/Resources/DWARF/a.out
        hw13/a.out.dSYM/Contents/Info.plist
        hw13/a.out
        hw13/hw13.zip
        hw13/hw131_MidiPacket.h
        hw13/hw131_MidiPacket_sizeof.cpp
        hw13/hw132_MidiPacket_cout.cpp
        hw13/hw133_chromaticScale_vector.cpp
        hw21/class21/c211_io/a.out
        hw21/class21/c211_io/io01_global_struct.cpp
        hw21/class21/c211_io/io02_boolalpha.cpp
        hw21/class21/c211_io/io03_showpos.cpp
        hw21/class21/c211_io/io04_showbase.cpp
        hw21/class21/c211_io/io05_format1.cpp
        hw21/class21/c211_io/io06_format2.cpp
        hw21/class21/c211_io/io07_format3.cpp
        hw21/class21/c211_io/io08_format4.cpp
        hw21/class21/c211_io/io09_format5.cpp
        hw21/class21/c211_io/io10_format6.cpp
        hw21/class21/c211_io/io11_format7.cpp
        hw21/class21/c211_io/io12_format8.cpp
        hw21/class21/c211_io/io13_stdcintest.cpp
        hw21/class21/c212_string/a.out
        hw21/class21/c212_string/str01_initialize.cpp
        hw21/class21/c212_string/str02_length_size.cpp
        hw21/class21/c212_string/str03_copy_constructor.cpp
        hw21/class21/c212_string/str04_assignment_operator.cpp
        hw21/class21/c212_string/str05_append.cpp
        hw21/class21/c212_string/str06_append_char.cpp
        hw21/class21/c212_string/str07_chars_index.cpp
        hw21/class21/c212_string/str08_chars_at.cpp
        hw21/class21/c212_string/str09_assign.cpp
        hw21/class21/c212_string/str10_insert.cpp
        hw21/class21/c212_string/str11_erase.cpp
        hw21/class21/c212_string/str12_replace.cpp
        hw21/class21/c212_string/str13_compare.cpp
        hw21/class21/c212_string/str14_substr.cpp
        hw21/class21/c212_string/str15_find.cpp
        hw21/class21/c212_string/str16_find_tab_chars.cpp
        hw21/class21/c213_sstream/a.out
        hw21/class21/c213_sstream/ss01_dec_hex_convert.cpp
        hw21/class21/c213_sstream/ss02_string_to_number.cpp
        hw21/class21/c213_sstream/ss03_stringstreams.cpp
        hw21/class21/c213_sstream/ss04_str2float.cpp
        hw21/class21/c213_sstream/ss05_floating_point_precision.cpp
        hw21/class21/c213_sstream/ss06_binary_bitset.cpp
        hw21/class21/c214_pointers/ptr01_at_star.cpp
        hw21/class21/c214_pointers/ptr02_elementAccess.cpp
        hw21/class21/c214_pointers/ptr03_set2null.cpp
        hw21/class21/c214_pointers/ptr04_doubleDelete.cpp
        hw21/class21/deleteme.cpp
        hw21/hw211_hexIntToString/a.out.dSYM/Contents/Resources/DWARF/a.out
        hw21/hw211_hexIntToString/a.out.dSYM/Contents/Info.plist
        hw21/hw211_hexIntToString/a.out
        hw21/hw211_hexIntToString/hw211_hexIntToString.cpp
        hw21/hw212_CMidiPacket/a.out.dSYM/Contents/Resources/DWARF/a.out
        hw21/hw212_CMidiPacket/a.out.dSYM/Contents/Info.plist
        hw21/hw212_CMidiPacket/a.out
        hw21/hw212_CMidiPacket/hw212_CMidiPacket.cpp
        hw21/hw212_CMidiPacket/hw212_CMidiPacket.h
        hw21/hw212_CMidiPacket/hw212_main.cpp
        hw21/_MACOSX
        hw21/class21cd
        hw22/c221_argc_argv/argc_argv.cpp
        hw22/c221_argc_argv/c221_argc_argv.cpp
        hw22/hw221_boilerplate/c221_argc_argv/argc_argv.cpp
        hw22/hw221_boilerplate/hw221_boilerplate.cpp
        hw22/hw222_CMidiPacket/hw222_CMidiPacket.cpp
        hw22/hw222_CMidiPacket/hw222_CMidiPacket.h
        hw22/hw222_CMidiPacket/hw222_main.cpp
        hw22/hw222_CMidiPacket/hw222_test_CMidiPacket.cpp
        hw22/hw222_CMidiPacket/hw222_test_CMidiPacket.h
        hw23/class23_chrono/c23_MidiPacketTimer/C23_CTimer.h
        hw23/class23_chrono/c23_MidiPacketTimer/C23_timer_test.cpp
        hw23/class23_chrono/c23_MidiPacketTimer/hw131_MidiPacket.h
        hw23/class23_chrono/c23_playtimeLimits/c23_playtimeLimits.cpp
        hw23/class23_chrono/c23_chronoFeatures.cpp
        hw23/class23_chrono/c23_simpleDelay.cpp
        hw23/class23_random/rand1.cpp
        hw23/class23_random/rand2.cpp
        hw23/class23_random/rand3.cpp
        hw23/class23_random/rand4.cpp
        hw23/class23_random/rand5.cpp
        hw23/class23_random/rand6.cpp
        hw23/class23_random/rand7.cpp
        hw23/class23_random/rand8.cpp
        hw23/class23_random/rand9.cpp
        hw23/class23_vectors/v01.cpp
        hw23/class23_vectors/v02.cpp
        hw23/class23_vectors/v03.cpp
        hw23/class23_vectors/v04.cpp
        hw23/class23_vectors/v05.cpp
        hw23/class23_vectors/v06.cpp
        hw23/class23_vectors/v07.cpp
        hw23/class23_vectors/v08.cpp
        hw23/class23_vectors/v09.cpp
        hw23/class23_vectors/v10.cpp
        hw23/class23_vectors/v11.cpp
        hw23/class23_vectors/v12.cpp
        hw23/class23_vectors/v13.cpp
        hw23/class23_vectors/v14.cpp
        hw23/class23_vectors/v15.cpp
        hw23/class23_vectors/v16.cpp
        hw23/class23_vectors/v17.cpp
        hw23/class23_vectors/v18.cpp
        hw23/class23_vectors/v19.cpp
        hw23/class23_vectors/v20.cpp
        hw23/class23_vectors/v21.cpp
        hw23/class23_vectors/v22.cpp
        hw23/class23_vectors/v23.cpp
        hw23/class23_vectors/v24.cpp
        hw23/class23_vectors/v25.cpp
        hw23/class23_vectors/v26.cpp
        hw23/class23_vectors/v27.cpp
        hw23/class23_vectors/v28.cpp
        hw23/class23_vectors/v29.cpp
        hw23/hw231_testCMP22/hw222_CMidiPacket.h
        hw23/hw231_testCMP22/hw222_main.cpp
        hw23/hw231_testCMP22/hw231_testCMP22.cpp
        hw23/hw232_gmdrums/hw232_gmdrums.cpp
        hw23/hw232_gmdrums/hw232_main.cpp
        hw23/hw233_playdrums/hw222_CMidiPacket.cpp
        hw23/hw233_playdrums/hw222_CMidiPacket.h
        hw23/hw233_playdrums/hw233_main.cpp
        hw23/hw233_playdrums/hw233_playdrums.cpp
        hw23/hw233_playdrums/hw233_playdrums.h
        hw23/hw234_scifiSounds/hw222_CMidiPacket.cpp
        hw23/hw234_scifiSounds/hw222_CMidiPacket.h
        hw23/hw234_scifiSounds/hw234_main.cpp
        hw23/hw234_scifiSounds/hw234_scifiSounds.cpp
        hw23/hw234_scifiSounds/hw234_scifiSounds.h
        hw31/c311_regex_example1/c311_regex.txt
        hw31/c312_regex_example2/c312_regex2.txt
        hw31/c313_regex_example3/c313_helloMidi_regex.cpp
        hw31/c313_regex_example3/hw312_CMidiPacket.cpp
        hw31/c313_regex_example3/hw312_CMidiPacket.h
        hw31/hw311_regex/hw311_answer.txt
        hw31/hw311_regex/oldDatabase.txt
        hw31/hw312_CMidiPacketFriends/hw312_CMidiPacket.cpp
        hw31/hw312_CMidiPacketFriends/hw312_CMidiPacket.h
        hw31/hw312_CMidiPacketFriends/hw312_main.cpp
        hw31/hw312_CMidiPacketFriends/hw312_test_CMidiPacket.cpp
        hw31/hw312_CMidiPacketFriends/hw312_test_CMidiPacket.h
        test_directory/tester.cpp)
